@@ -7,7 +7,10 @@
   <attr path="//boxed[@cname='GdkColor']/method[@name='Parse']/*/*[@type='GdkColor*']" name="pass_as">ref</attr>
   <attr path="//boxed[@cname='GdkCursor']" name="opaque">1</attr>
   <attr path="//callback[@cname='GdkPixbufDestroyNotify']/*/*[@type='guchar*']" name="array">1</attr>
+  <attr path="//class[@cname='GdkDrag_']/method[@name='Begin']" name="hidden">1</attr>
   <attr path="//class[@cname='GdkEvent_']" name="name">EventHelper</attr>
+  <attr path="//class[@cname='GdkGlobal']/method[@name='DevicesList']" name="hidden">1</attr>
+  <attr path="//class[@cname='GdkGlobal']/method[@name='ListVisuals']" name="hidden">1</attr>
   <attr path="//class[@cname='GdkPango_']" name="name">PangoHelper</attr>
   <attr path="//class[@cname='GdkPixbuf_']" name="hidden">1</attr>
   <attr path="//class[@cname='GdkPointer_']/method[@name='Grab']/*/*[@name='confine_to']" name="null_ok">1</attr>
@@ -18,6 +21,7 @@
   <attr path="//object[@cname='GdkColormap']/method[@name='AllocColors']/*/*[@name='success']" name="array">1</attr>
   <attr path="//object[@cname='GdkColormap']/method[@name='QueryColor']/*/*[@type='GdkColor*']" name="pass_as">ref</attr>
   <attr path="//object[@cname='GdkColormap']/method[@name='FreeColors']/*/*[@type='GdkColor*']" name="array">1</attr>
+  <attr path="//object[@cname='GdkDisplay']/method[@name='ListDevices']" name="hidden">1</attr>
   <attr path="//object[@cname='GdkDisplayManager']/method[@name='ListDisplays']" name="hidden">1</attr>
   <attr path="//object[@cname='GdkDrawable']/method[@name='DrawLines']" name="hidden">1</attr>
   <attr path="//object[@cname='GdkDrawable']/method[@name='DrawPolygon']" name="hidden">1</attr>
@@ -42,16 +46,22 @@
   <attr path="//object[@cname='GdkPixbufLoader']/method[@name='Write']/*/*[@name='buf']" name="array">1</attr>
   <attr path="//object[@cname='GdkPixmap']" name="parent">GdkDrawable</attr>
   <attr path="//object[@cname='GdkPixmap']/constructor[@cname='gdk_pixmap_new']/*/*[@type='GdkDrawable*']" name="null_ok">1</attr>
+  <attr path="//object[@cname='GdkScreen']/method[@name='GetToplevelWindows']" name="hidden">1</attr>
   <attr path="//object[@cname='GdkScreen']/method[@name='Height']" name="hidden">1</attr>
   <attr path="//object[@cname='GdkScreen']/method[@name='HeightMm']" name="hidden">1</attr>
+  <attr path="//object[@cname='GdkScreen']/method[@name='ListVisuals']" name="hidden">1</attr>
   <attr path="//object[@cname='GdkScreen']/method[@name='Width']" name="hidden">1</attr>
   <attr path="//object[@cname='GdkScreen']/method[@name='WidthMm']" name="hidden">1</attr>
+  <attr path="//object[@cname='GdkWindow']/method[@name='GetChildren']" name="hidden">1</attr>
   <attr path="//object[@cname='GdkWindow']" name="parent">GdkDrawable</attr>
   <attr path="//object[@cname='GdkWindow']/method[@name='GetInternalPaintInfo']/*/*[@type='gint*']" name="pass_as">out</attr>
   <attr path="//object[@cname='GdkWindow']/method[@name='GetInternalPaintInfo']/*/*[@type='GdkDrawable**']" name="pass_as">out</attr>
   <attr path="//object[@cname='GdkWindow']/method[@name='GetOrigin']/*/*[@type='gint*']" name="pass_as">out</attr>
   <attr path="//object[@cname='GdkWindow']/method[@name='GetPointer']/*/*[@type='gint*']" name="pass_as">out</attr>
   <attr path="//object[@cname='GdkWindow']/method[@name='GetPointer']/*/*[@type='GdkModifierType*']" name="pass_as">out</attr>
+  <attr path="//object[@cname='GdkWindow']/method[@name='GetToplevels']" name="hidden">1</attr>
+  <attr path="//object[@cname='GdkWindow']/method[@name='PeekChildren']" name="hidden">1</attr>
+  <attr path="//object[@cname='GdkWindow']/method[@name='SetIconList']" name="hidden">1</attr>
   <attr path="//struct[@cname='GdkPixmapObject']" name="hidden">1</attr>
   <attr path="//struct[@cname='GdkTimeCoord']/field[@cname='axes']" name="array_len">128</attr>
   <attr path="//struct[@cname='GdkWindowObject']" name="hidden">1</attr>
