@@ -1,0 +1,36 @@
+// Global.custom - customizations to Gdk.Global
+//
+// Authors: Mike Kestner  <mkestner@ximian.com>
+//
+// Copyright (c) 2004 Novell, Inc.
+
+		[DllImport("libgdk-win32-2.0-0.dll")]
+		static extern IntPtr gdk_devices_list ();
+
+		public static Device[] DevicesList ()
+		{
+			IntPtr raw_ret = gdk_devices_list ();
+			if (raw_ret == IntPtr.Zero)
+				return new Device [0];
+			GLib.List list = new GLib.List(raw_ret);
+			Device[] result = new Device [list.Count];
+			for (int i = 0; i < list.Count; i++)
+				result [i] = list [i] as Device;
+			return result;
+		}
+
+		[DllImport("libgdk-win32-2.0-0.dll")]
+		static extern IntPtr gdk_list_visuals ();
+
+		public static Visual[] ListVisuals ()
+		{
+			IntPtr raw_ret = gdk_list_visuals ();
+			if (raw_ret == IntPtr.Zero)
+				return new Visual [0];
+			GLib.List list = new GLib.List(raw_ret);
+			Visual[] result = new Visual [list.Count];
+			for (int i = 0; i < list.Count; i++)
+				result [i] = list [i] as Visual;
+			return result;
+		}
+
