@@ -702,7 +702,7 @@
           <parameter type="guint32" name="time_" />
         </parameters>
       </method>
-      <method name="ListDevices" cname="gdk_display_list_devices">
+      <method name="ListDevices" cname="gdk_display_list_devices" hidden="1">
         <return-type type="GList*" />
       </method>
       <method name="Open" cname="gdk_display_open" shared="true">
@@ -1539,7 +1539,7 @@
       <method name="GetSystemVisual" cname="gdk_screen_get_system_visual">
         <return-type type="GdkVisual*" />
       </method>
-      <method name="GetToplevelWindows" cname="gdk_screen_get_toplevel_windows">
+      <method name="GetToplevelWindows" cname="gdk_screen_get_toplevel_windows" hidden="1">
         <return-type type="GList*" />
       </method>
       <method name="GetType" cname="gdk_screen_get_type" shared="true">
@@ -1557,7 +1557,7 @@
       <method name="HeightMm" cname="gdk_screen_height_mm" shared="true" hidden="1">
         <return-type type="gint" />
       </method>
-      <method name="ListVisuals" cname="gdk_screen_list_visuals">
+      <method name="ListVisuals" cname="gdk_screen_list_visuals" hidden="1">
         <return-type type="GList*" />
       </method>
       <method name="MakeDisplayName" cname="gdk_screen_make_display_name">
@@ -1741,7 +1741,7 @@
       <method name="Fullscreen" cname="gdk_window_fullscreen">
         <return-type type="void" />
       </method>
-      <method name="GetChildren" cname="gdk_window_get_children">
+      <method name="GetChildren" cname="gdk_window_get_children" hidden="1">
         <return-type type="GList*" />
       </method>
       <method name="GetDecorations" cname="gdk_window_get_decorations">
@@ -1815,7 +1815,7 @@
       <method name="GetToplevel" cname="gdk_window_get_toplevel">
         <return-type type="GdkWindow*" />
       </method>
-      <method name="GetToplevels" cname="gdk_window_get_toplevels" shared="true">
+      <method name="GetToplevels" cname="gdk_window_get_toplevels" shared="true" hidden="1">
         <return-type type="GList*" />
       </method>
       <method name="GetUpdateArea" cname="gdk_window_get_update_area">
@@ -1915,7 +1915,7 @@
           <parameter type="gint" name="attributes_mask" />
         </parameters>
       </constructor>
-      <method name="PeekChildren" cname="gdk_window_peek_children">
+      <method name="PeekChildren" cname="gdk_window_peek_children" hidden="1">
         <return-type type="GList*" />
       </method>
       <method name="ProcessAllUpdates" cname="gdk_window_process_all_updates" shared="true">
@@ -2029,7 +2029,7 @@
           <parameter type="GdkBitmap*" name="mask" />
         </parameters>
       </method>
-      <method name="SetIconList" cname="gdk_window_set_icon_list">
+      <method name="SetIconList" cname="gdk_window_set_icon_list" hidden="1">
         <return-type type="void" />
         <parameters>
           <parameter type="GList*" name="pixbufs" />
@@ -2757,7 +2757,7 @@
           <parameter type="gpointer" name="data" />
         </parameters>
       </method>
-      <method name="DevicesList" cname="gdk_devices_list" shared="true">
+      <method name="DevicesList" cname="gdk_devices_list" shared="true" hidden="1">
         <return-type type="GList*" />
       </method>
       <method name="EventsPending" cname="gdk_events_pending" shared="true">
@@ -2805,7 +2805,7 @@
           <parameter type="GdkExtensionMode" name="mode" />
         </parameters>
       </method>
-      <method name="ListVisuals" cname="gdk_list_visuals" shared="true">
+      <method name="ListVisuals" cname="gdk_list_visuals" shared="true" hidden="1">
         <return-type type="GList*" />
       </method>
       <method name="NotifyStartupComplete" cname="gdk_notify_startup_complete" shared="true">
@@ -2894,7 +2894,7 @@
           <parameter type="guint32" name="time_" />
         </parameters>
       </method>
-      <method name="Begin" cname="gdk_drag_begin" shared="true">
+      <method name="Begin" cname="gdk_drag_begin" shared="true" hidden="1">
         <return-type type="GdkDragContext*" />
         <parameters>
           <parameter type="GdkWindow*" name="window" />
