@@ -1,5 +1,11 @@
 2004-02-12  Mike Kestner  <mkestner@ximian.com>
 
+	* gdk/Gdk.metadata : hide the GList API
+	* gdk/*.custom : manually wrap GList api using typed arrays
+	* gdk/gdk-api.xml : regen.
+
+2004-02-12  Mike Kestner  <mkestner@ximian.com>
+
 	* gdk/Gdk.metadata : hide the GSList API
 	* gdk/*.custom : manually wrap GSList api using typed arrays
 	* gdk/gdk-api.xml : regen.
